fixed align issue

--- a/style.css
+++ b/style.css
@@ -333,9 +333,8 @@ h2 {
     top: -1.5375rem;
 }
 .aboutText {
-  height: 40vh;
+  min-height: 40vh;
   width: 80%;
-  float: left;
   padding-left: 10%;
 
 }
